Set up recipe content structure in Bistec page
Establish structure to be used for other recipes:
 - Dish name
 - Image (stored in separate asset folder)
 - Description
 - Ingredients
 - Steps

--- a/recipes/bistec_tagalog.html
+++ b/recipes/bistec_tagalog.html
@@ -7,6 +7,12 @@
 
 <body>
     <h1>Bistec Tagalog</h1>
+    <img src="../images/simply_recipes-bistec.jpg" alt="Bistec tagalog dish">
+    <h2>Description</h2>
+
+    <h2>Ingredients</h2>
+
+    <h2>Steps</h2>
 </body>
 
 </html>
