Add recipe content to structure in bistec tagalog page

--- a/recipes/bistec_tagalog.html
+++ b/recipes/bistec_tagalog.html
@@ -9,10 +9,41 @@
     <h1>Bistec Tagalog</h1>
     <img src="../images/simply_recipes-bistec.jpg" alt="Bistec tagalog dish">
     <h2>Description</h2>
+    <a href="https://www.kawalingpinoy.com/bistek/" target="_blank" rel="noreferrer">Kawaling Pinoy Recipe</a>
+    <p>
+        Filipino-style beef steak dish usually served with rice. Thin sirloin 
+        slices braised in a mixture of citrus, soy sauce, onions, and garlic.
+    </p>
 
     <h2>Ingredients</h2>
+    <ul>
+        <li>2 pounds Beef sirloin</li>
+        <li>2 lemons OR 4 calamansi</li>
+        <li>Quarter cup of soy sauce</li>
+        <li>1 onion head</li>
+        <li>1 garlic head</li>
+        <li>Quarter teaspoon of pepper</li>
+        <li>3 tablespoons of canola oil</li>
+        <li>1 cup of water</li>
+    </ul>
 
     <h2>Steps</h2>
+    <ol>
+        <li>Combine the beef, lemon juice, soy sauce, sliced onions, garlic, 
+            and pepper in a bowl. Massage the meat in the marinade and let
+            marinate for 30 minutes.</li>
+        <li>Remove the meat, onions, and garlic then squeeze and save up 
+            the excess liquid.</li>
+        <li>Heat oil in a pan at high heat. Add beef and cook for around 4 
+            minutes per side until lightly browned. Save released juices.</li>
+        <li>In the same pan, add onions and garlic. Stir regularly until 
+            softened, then return beef to pan.</li>
+        <li>Add the marinade and meat juices back to the pan. Add water and 
+            build to a boil.</li>
+        <li>Cover the pan, lower the heat, simmer for 40-50 minutes until 
+            meat is tender.</li>
+        <li>Garnish the final dish with fresh onion rings.</li>
+    </ol>
 </body>
 
 </html>
