Organize recipes on home page into list
Ensures the links are on different lines for ease
of use.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/bistec_tagalog.html">Bistec Tagalog</a>
+    <ul>
+        <li><a href="recipes/bistec_tagalog.html">Bistec Tagalog</a></li>
+    </ul>
 </body>
 </html>
