Adjust size of bistec image to 300px width
Match the scaling of the chicken adobo image for
image size consistency across pages.

--- a/recipes/bistec_tagalog.html
+++ b/recipes/bistec_tagalog.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Bistec Tagalog</h1>
-    <img src="../images/simply_recipes-bistec.jpg" alt="Bistec tagalog dish">
+    <img src="../images/simply_recipes-bistec.jpg" alt="Bistec tagalog dish" width="300">
     <h2>Description</h2>
     <a href="https://www.kawalingpinoy.com/bistek/" target="_blank" rel="noreferrer">Kawaling Pinoy Recipe</a>
     <p>
