Add content to chicken adobo page structure
Add description, ingredient list, and step list.

--- a/recipes/chicken_adobo.html
+++ b/recipes/chicken_adobo.html
@@ -10,7 +10,41 @@
     <img src="../images/eat_with_carmen-chicken_adobo.jpg" alt="Chicken Adobo from Eat with Carmen" width="300">
     <h2>Description</h2>
     <a href="https://www.eatwithcarmen.com/filipino-recipes/" target="_blank" rel="noreferrer">Eat With Carmen Recipe</a>
+    <p>
+        The unofficial national dish of the Philippines! Adobo refers to a
+        cooking style, so this can theoretically be done with any meat but is
+        most commonly done with chicken or pork. The meat is simmered in a soy
+        and vinegar sauce and is commonly served with white rice.
+    </p>
     <h2>Ingredients</h2>
+    <ul>
+        <li>8-10 skinless chicken thighs</li>
+        <li>Half cup of water or chicken stock</li>
+        <li>Half cup of white or apple cider vinegar</li>
+        <li>Third cup low-sodium soy sauce</li>
+        <li>2 tablespoons of brown sugar</li>
+        <li>6 cloves of garlic</li>
+        <li>1 tablespoon of black peppercorn</li>
+        <li>4 bay leaves</li>
+        <li>1 teaspoon of avocado oil</li>
+        <li>Crushed salt and pepper</li>
+    </ul>
     <h2>Steps</h2>
+    <ol>
+        <li>Heat avocado oil in a pan, brown chicken on both sides and lightly
+            season with salt and pepper. Remove chicken when browned.
+        </li>
+        <li>Use paper towels to remove excess oil from the pan.</li>
+        <li>Add garlic and black peppercorns to the pan, sauté for a minute
+            until fragrant
+        </li>
+        <li>Stir in soy sauce, vinegar, water, sugar, and bay leaves then
+            return chicken to the pan. Bring to a boil then reduce to low-medium
+            simmer and cover the pan. Cook for 20 minutes.
+        </li>
+        <li>Remove the lid and increase heat to high for about 5 minutes to
+            reduce the braising liquid to whatever consistency is desired.
+        </li>
+    </ol>
 </body>
 </html>
