Add recipe link and image assets for sago page

--- a/recipes/sago_pudding.html
+++ b/recipes/sago_pudding.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <h1>Sago Pudding</h1>
+        <img src="../images/allrecipes-sago_pudding.jpg" alt="Sago Pudding" width="300">
         <h2>Description</h2>
+        <a href="https://www.allrecipes.com/recipe/89432/sago-pudding-gula-melaka/" target="_blank" rel="noreferrer">AllRecipes recipe</a>
         <h2>Ingredients</h2>
         <h2>Steps</h2>
         
