--- a/recipes/sago_pudding.html
+++ b/recipes/sago_pudding.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -13,8 +9,37 @@
         <img src="../images/allrecipes-sago_pudding.jpg" alt="Sago Pudding" width="300">
         <h2>Description</h2>
         <a href="https://www.allrecipes.com/recipe/89432/sago-pudding-gula-melaka/" target="_blank" rel="noreferrer">AllRecipes recipe</a>
+        <p>
+            Coconut tree sugar combined with coconut milk and poured over sago
+            pearl pudding.
+        </p>
+
         <h2>Ingredients</h2>
+        <ul>
+            <li>10 cups of water</li>
+            <li>7 ounces of pearl sago</li>
+            <li>7 ounces of palm sugar</li>
+            <li>Half cup of water</li>
+            <li>2 cups of canned coconut milk</li>
+        </ul>
+
         <h2>Steps</h2>
-        
+        <ol>
+            <li>Boil 10 cups of water in a large pot. Slowly stir the sago
+                pearls in to prevent clumping. Return to a boil then reduce the 
+                head to low. Cook until the sago turns translucent while
+                occasionally stirring for 30 minutes. Pour the sago into jelly
+                molds and refrigerate the molds overnight.
+            </li>
+            <li>In a small saucepan, stir the palm sugar and water. Bring
+                to a boil until the sugar has dissolved. Strain through a fine 
+                sieve until sugar has dissolved.
+            </li>
+            <li>Unmold the refrigerated pudding. Serve with the coconut milk
+                and palm sugar syrup separately for each consumer to pour over
+                their pudding.
+            </li>
+        </ol>
+
     </body>
 </html>
