--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/bistec_tagalog.html">Bistec Tagalog</a></li>
+        <li><a href="recipes/chicken_adobo.html">Chicken Adobo</a></li>
+        <li><a href="recipes/sago_pudding.html">Sago Pudding</a></li>
     </ul>
 </body>
 </html>
