--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <img id="logo" src="./images/valknut.png" alt="Viking icons created by Freepik - Flaticon">
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/bistec_tagalog.html">Bistec Tagalog</a></li>
