--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-    <img id="logo" src="./images/valknut.png" alt="Viking icons created by Freepik - Flaticon">
-    <h1>Odin Recipes</h1>
+    <div class="site-head">
+        <img class="site-logo" src="./images/valknut.png" alt="Viking icons created by Freepik - Flaticon">
+        <h1 class="site-name">Odin Recipes</h1>
+    </div>
     <ul>
         <li><a href="recipes/bistec_tagalog.html">Bistec Tagalog</a></li>
         <li><a href="recipes/chicken_adobo.html">Chicken Adobo</a></li>
