--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="site-head">
         <img class="site-logo" src="./images/valknut.png" alt="Viking icons created by Freepik - Flaticon">
-        <h1 class="site-name">Odin Recipes</h1>
+        <h1 class="site-name text">Odin Recipes</h1>
     </div>
     <ul>
-        <li><a href="recipes/bistec_tagalog.html">Bistec Tagalog</a></li>
-        <li><a href="recipes/chicken_adobo.html">Chicken Adobo</a></li>
-        <li><a href="recipes/sago_pudding.html">Sago Pudding</a></li>
+        <li class="text"><a href="recipes/bistec_tagalog.html">Bistec Tagalog</a></li>
+        <li class="text"><a href="recipes/chicken_adobo.html">Chicken Adobo</a></li>
+        <li class="text"><a href="recipes/sago_pudding.html">Sago Pudding</a></li>
     </ul>
 </body>
 </html>
