--- a/recipes/sago_pudding.html
+++ b/recipes/sago_pudding.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes - Sago Pudding</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Sago Pudding</h1>
