Put recipe names and images in div to center in page
More aesthetically pleasing for those elements to be centered.
Use same styling as home page header.

--- a/recipes/chicken_adobo.html
+++ b/recipes/chicken_adobo.html
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-    <h1>Chicken Adobo</h1>
-    <img src="../images/eat_with_carmen-chicken_adobo.jpg" alt="Chicken Adobo from Eat with Carmen" width="300">
+    <div class="site-head">
+        <h1>Chicken Adobo</h1>
+        <img src="../images/eat_with_carmen-chicken_adobo.jpg" alt="Chicken Adobo from Eat with Carmen" width="300">
+    </div>
     <h2>Description</h2>
     <a href="https://www.eatwithcarmen.com/filipino-recipes/" target="_blank" rel="noreferrer">Eat With Carmen Recipe</a>
     <p>
