--- a/recipes/sago_pudding.html
+++ b/recipes/sago_pudding.html
@@ -6,8 +6,11 @@
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Sago Pudding</h1>
-        <img src="../images/allrecipes-sago_pudding.jpg" alt="Sago Pudding" width="300">
+        <div class="site-head">
+            <h1>Sago Pudding</h1>
+            <img src="../images/allrecipes-sago_pudding.jpg" alt="Sago Pudding" width="300">
+        </div>
+        
         <h2>Description</h2>
         <a href="https://www.allrecipes.com/recipe/89432/sago-pudding-gula-melaka/" target="_blank" rel="noreferrer">AllRecipes recipe</a>
         <p>
