--- a/recipes/bistec_tagalog.html
+++ b/recipes/bistec_tagalog.html
@@ -7,8 +7,11 @@
 </head>
 
 <body>
-    <h1>Bistec Tagalog</h1>
-    <img src="../images/simply_recipes-bistec.jpg" alt="Bistec tagalog dish" width="300">
+    <div class="site-head">
+        <h1>Bistec Tagalog</h1>
+        <img src="../images/simply_recipes-bistec.jpg" alt="Bistec tagalog dish" width="300">
+    </div>
+    
     <h2>Description</h2>
     <a href="https://www.kawalingpinoy.com/bistek/" target="_blank" rel="noreferrer">Kawaling Pinoy Recipe</a>
     <p>
