Label section headers and color them chocolate brown

--- a/recipes/bistec_tagalog.html
+++ b/recipes/bistec_tagalog.html
@@ -12,14 +12,14 @@
         <img src="../images/simply_recipes-bistec.jpg" alt="Bistec tagalog dish" width="300">
     </div>
     
-    <h2>Description</h2>
+    <h2 class="section-header">Description</h2>
     <a href="https://www.kawalingpinoy.com/bistek/" target="_blank" rel="noreferrer">Kawaling Pinoy Recipe</a>
     <p>
         Filipino-style beef steak dish usually served with rice. Thin sirloin 
         slices braised in a mixture of citrus, soy sauce, onions, and garlic.
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 class="section-header">Ingredients</h2>
     <ul>
         <li>2 pounds Beef sirloin</li>
         <li>2 lemons OR 4 calamansi</li>
@@ -31,7 +31,7 @@
         <li>1 cup of water</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="section-header">Steps</h2>
     <ol>
         <li>Combine the beef, lemon juice, soy sauce, sliced onions, garlic, 
             and pepper in a bowl. Massage the meat in the marinade and let
