--- a/recipes/sago_pudding.html
+++ b/recipes/sago_pudding.html
@@ -10,15 +10,15 @@
             <h1>Sago Pudding</h1>
             <img src="../images/allrecipes-sago_pudding.jpg" alt="Sago Pudding" width="300">
         </div>
-        
-        <h2>Description</h2>
+
+        <h2 class="section-header">Description</h2>
         <a href="https://www.allrecipes.com/recipe/89432/sago-pudding-gula-melaka/" target="_blank" rel="noreferrer">AllRecipes recipe</a>
         <p>
             Coconut tree sugar combined with coconut milk and poured over sago
             pearl pudding.
         </p>
 
-        <h2>Ingredients</h2>
+        <h2 class="section-header">Ingredients</h2>
         <ul>
             <li>10 cups of water</li>
             <li>7 ounces of pearl sago</li>
@@ -27,7 +27,7 @@
             <li>2 cups of canned coconut milk</li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2 class="section-header">Steps</h2>
         <ol>
             <li>Boil 10 cups of water in a large pot. Slowly stir the sago
                 pearls in to prevent clumping. Return to a boil then reduce the 
