--- a/recipes/chicken_adobo.html
+++ b/recipes/chicken_adobo.html
@@ -11,7 +11,7 @@
         <h1>Chicken Adobo</h1>
         <img src="../images/eat_with_carmen-chicken_adobo.jpg" alt="Chicken Adobo from Eat with Carmen" width="300">
     </div>
-    <h2>Description</h2>
+    <h2 class="section-header">Description</h2>
     <a href="https://www.eatwithcarmen.com/filipino-recipes/" target="_blank" rel="noreferrer">Eat With Carmen Recipe</a>
     <p>
         The unofficial national dish of the Philippines! Adobo refers to a
@@ -19,7 +19,7 @@
         most commonly done with chicken or pork. The meat is simmered in a soy
         and vinegar sauce and is commonly served with white rice.
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="section-header">Ingredients</h2>
     <ul>
         <li>8-10 skinless chicken thighs</li>
         <li>Half cup of water or chicken stock</li>
@@ -32,7 +32,7 @@
         <li>1 teaspoon of avocado oil</li>
         <li>Crushed salt and pepper</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="section-header">Steps</h2>
     <ol>
         <li>Heat avocado oil in a pan, brown chicken on both sides and lightly
             season with salt and pepper. Remove chicken when browned.
