Horizontally center recipe links in home page
Plan to add recipe icons/images and have each recipe entry be
selectable for aesthetic purposes.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
         <img class="site-logo" src="./images/valknut.png" alt="Viking icons created by Freepik - Flaticon">
         <h1 class="site-name text">Odin Recipes</h1>
     </div>
-    <ul>
-        <li class="text"><a href="recipes/bistec_tagalog.html">Bistec Tagalog</a></li>
-        <li class="text"><a href="recipes/chicken_adobo.html">Chicken Adobo</a></li>
-        <li class="text"><a href="recipes/sago_pudding.html">Sago Pudding</a></li>
-    </ul>
+    <div class="recipe-container">
+        <span class="recipe-entry">
+            <a href="recipes/bistec_tagalog.html">Bistec Tagalog</a>
+        </span>
+        <span class="recipe-entry">
+            <a href="recipes/chicken_adobo.html">Chicken Adobo</a>
+        </span>
+        <span class="recipe-entry">
+            <a href="recipes/sago_pudding.html">Sago Pudding</a>
+        </span>
+    </div>
 </body>
 </html>
