Reorganize recipe elements and add images to links
Images are added to the link so they can also be clicked to direct users
to the recipes. Remove underlining and change colors for links for
aesthetic purposes. Make link containers into flex boxes so that images
and text within the link can be vertically aligned and centered.

Plan to:
 - Fix how images are displayed so they can be the same size but cropped
   and not distorted

--- a/index.html
+++ b/index.html
@@ -12,15 +12,24 @@
         <h1 class="site-name text">Odin Recipes</h1>
     </div>
     <div class="recipe-container">
-        <span class="recipe-entry">
-            <a href="recipes/bistec_tagalog.html">Bistec Tagalog</a>
-        </span>
-        <span class="recipe-entry">
-            <a href="recipes/chicken_adobo.html">Chicken Adobo</a>
-        </span>
-        <span class="recipe-entry">
-            <a href="recipes/sago_pudding.html">Sago Pudding</a>
-        </span>
+        <div class="recipe-entry">
+            <a href="recipes/bistec_tagalog.html">
+                <img class="recipe-image" src="images/simply_recipes-bistec.jpg" alt="Bistec Tagalog image">
+                Bistec Tagalog
+            </a>
+        </div>
+        <div class="recipe-entry">
+            <a href="recipes/chicken_adobo.html">
+                <img class="recipe-image" src="images/eat_with_carmen-chicken_adobo.jpg" alt="Bistec Tagalog image">
+                Chicken Adobo
+            </a>
+        </div>
+        <div class="recipe-entry">
+            <a href="recipes/sago_pudding.html">
+                <img class="recipe-image" src="images/allrecipes-sago_pudding.jpg" alt="Bistec Tagalog image">
+                Sago Pudding
+            </a>
+        </div>
     </div>
 </body>
 </html>
