--- a/recipes/sago_pudding.html
+++ b/recipes/sago_pudding.html
@@ -10,40 +10,41 @@
             <h1>Sago Pudding</h1>
             <img src="../images/allrecipes-sago_pudding.jpg" alt="Sago Pudding" width="300">
         </div>
+        <div class="site-content">
+            <h2 class="section-header">Description</h2>
+            <a href="https://www.allrecipes.com/recipe/89432/sago-pudding-gula-melaka/" target="_blank" rel="noreferrer">AllRecipes recipe</a>
+            <p>
+                Coconut tree sugar combined with coconut milk and poured over sago
+                pearl pudding.
+            </p>
 
-        <h2 class="section-header">Description</h2>
-        <a href="https://www.allrecipes.com/recipe/89432/sago-pudding-gula-melaka/" target="_blank" rel="noreferrer">AllRecipes recipe</a>
-        <p>
-            Coconut tree sugar combined with coconut milk and poured over sago
-            pearl pudding.
-        </p>
+            <h2 class="section-header">Ingredients</h2>
+            <ul>
+                <li>10 cups of water</li>
+                <li>7 ounces of pearl sago</li>
+                <li>7 ounces of palm sugar</li>
+                <li>Half cup of water</li>
+                <li>2 cups of canned coconut milk</li>
+            </ul>
 
-        <h2 class="section-header">Ingredients</h2>
-        <ul>
-            <li>10 cups of water</li>
-            <li>7 ounces of pearl sago</li>
-            <li>7 ounces of palm sugar</li>
-            <li>Half cup of water</li>
-            <li>2 cups of canned coconut milk</li>
-        </ul>
-
-        <h2 class="section-header">Steps</h2>
-        <ol>
-            <li>Boil 10 cups of water in a large pot. Slowly stir the sago
-                pearls in to prevent clumping. Return to a boil then reduce the 
-                head to low. Cook until the sago turns translucent while
-                occasionally stirring for 30 minutes. Pour the sago into jelly
-                molds and refrigerate the molds overnight.
-            </li>
-            <li>In a small saucepan, stir the palm sugar and water. Bring
-                to a boil until the sugar has dissolved. Strain through a fine 
-                sieve until sugar has dissolved.
-            </li>
-            <li>Unmold the refrigerated pudding. Serve with the coconut milk
-                and palm sugar syrup separately for each consumer to pour over
-                their pudding.
-            </li>
-        </ol>
+            <h2 class="section-header">Steps</h2>
+            <ol>
+                <li>Boil 10 cups of water in a large pot. Slowly stir the sago
+                    pearls in to prevent clumping. Return to a boil then reduce the 
+                    head to low. Cook until the sago turns translucent while
+                    occasionally stirring for 30 minutes. Pour the sago into jelly
+                    molds and refrigerate the molds overnight.
+                </li>
+                <li>In a small saucepan, stir the palm sugar and water. Bring
+                    to a boil until the sugar has dissolved. Strain through a fine 
+                    sieve until sugar has dissolved.
+                </li>
+                <li>Unmold the refrigerated pudding. Serve with the coconut milk
+                    and palm sugar syrup separately for each consumer to pour over
+                    their pudding.
+                </li>
+            </ol>
+        </div>
 
     </body>
 </html>
